# xstation-sd-util

./: .gitignore  README.md  pyproject.toml
src/xstation_sd_util/: __main__.py  cli.py  config.py  firmware.py  formatter.py  organizer.py  processor.py
src/xstation_sd_util/dests/: base.py  local.py  smb.py
src/xstation_sd_util/extractors/: base.py  rar.py  sevenzip.py  tar.py  zip.py
src/xstation_sd_util/sources/: base.py  local.py  smb.py
tests/: test_extractors.py  test_firmware.py  test_formatter.py  test_organizer.py  test_processor.py  test_sources.py
